--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -1,18 +1,26 @@
-<html>
-<head> 
-    <title> Safty's page </title>
-    
-</head>
-<body>
-<h1>hello world
-    hi how are you </h1>
-    <hr>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis vero, animi iusto incidunt voluptatem nemo deleniti illo rerum minima, quas provident tenetur modi reprehenderit odit! Doloremque adipisci consequatur quia voluptates!</p>
-   <hr> <h2>mahmoud</h2>
-   <br>
-   <p>Lorem ipsum dolor sit.</p>
-   <br>
-   <p>Lorem ipsum dolor sit amet.</p>
-   <p>copyright &copy; made with love &hearts; &macr;</p>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>pop quiz</title>
+        <link rel="style sheet" href="css.css">
+    </head>
+    <body>
+        <nav class="navebar bg-dark">
+            <div class="container nav-items">
+                <div class="logo">
+                    <a href="#">HTML demo</a>
+                </div>
+                <div class="links">
+                    <ul>
+                        <li><a herf="#">test</a></li>
+                        <li><a herf="#">test1</a></li>
+                        <li><a herf="#">test2</a></li>
+                        <li><a herf="#">test3</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </body>
+
 </html>
